# nn-hal

./: :q  .clang-format  .gitignore  Android.bp  Android.mk  BUILD.gn  BasePreparedModel.cpp  BasePreparedModel.h  DetectionClient.cpp  DetectionClient.h  Driver.cpp  Driver.h  IENetwork.cpp  IENetwork.h  ModelManager.cpp  ModelManager.h  PreparedModel.cpp  README.md  android.hardware.neuralnetworks@1.1-generic-cpu.rc  android.hardware.neuralnetworks@1.1-generic-gpu.rc  android.hardware.neuralnetworks@1.2-generic-cpu.rc  android.hardware.neuralnetworks@1.3.xml  gna_driver.cpp  service.cpp  utils.cpp  utils.h
graphAPI/: CMakeLists.txt  IENetwork.h
intel_nn_hal/graphTests/: CMakeLists.txt  graphTests.mk  helpers-test.hpp  main.cpp
vpu-hal2/dl/inference-engine/src/dumper/: CMakeLists.txt  dump_plugin.cpp  dump_plugin.h  ie_dump_plugin.hpp  ie_dump_plugin_ptr.hpp
vpu-hal2/dl/inference-engine/src/inference_engine/: CMakeLists.txt  ade_util.cpp  ade_util.hpp  blob_factory.cpp  blob_factory.hpp  caseless.hpp  cnn_network_impl.cpp  cnn_network_impl.hpp  debug.h  description_buffer.hpp  dll_main.hpp  file_utils.cpp  file_utils.h  graph_tools.hpp  graph_transformer.cpp  graph_transformer.h  ie_algorithm.hpp  ie_cnn_net_reader_impl.cpp  ie_cnn_net_reader_impl.h  ie_data.cpp  ie_device.cpp  ie_global.cpp  ie_graph_splitter.cpp  ie_graph_splitter.hpp  ie_layers.cpp  ie_layouts.cpp  ie_profiling.hpp  ie_util_internal.cpp  ie_util_internal.hpp  ie_utils.cpp  ie_version.cpp  layer_transform.hpp  parsers.h  precision_utils.cpp  precision_utils.h  range_iterator.hpp  system_alllocator.cpp  system_alllocator.hpp  v2_format_parser.cpp  v2_format_parser.h  (+5 more)
vpu-hal2/dl/inference-engine/src/inference_engine/cpp_interfaces/: exception2status.hpp  ie_executor_manager.cpp  ie_executor_manager.hpp  ie_itask_executor.hpp  ie_task.cpp  ie_task.hpp  ie_task_executor.cpp  ie_task_executor.hpp  ie_task_synchronizer.hpp  ie_task_with_stages.cpp  ie_task_with_stages.hpp
vpu-hal2/dl/inference-engine/src/inference_engine/cpp_interfaces/base/: ie_executable_network_base.hpp  ie_infer_async_request_base.hpp  ie_plugin_base.hpp
vpu-hal2/dl/inference-engine/src/inference_engine/cpp_interfaces/impl/: ie_executable_network_internal.hpp  ie_executable_network_thread_safe_async_only.hpp  ie_executable_network_thread_safe_default.hpp  ie_infer_async_request_internal.hpp  ie_infer_async_request_thread_safe_default.hpp  ie_infer_async_request_thread_safe_internal.hpp  ie_infer_request_internal.hpp  ie_plugin_internal.hpp
vpu-hal2/dl/inference-engine/src/inference_engine/cpp_interfaces/interface/: ie_iexecutable_network_internal.hpp  ie_iinfer_async_request_internal.hpp  ie_iinfer_request_internal.hpp  ie_iplugin_internal.hpp
vpu-hal2/dl/inference-engine/src/mkldnn_plugin/: CMakeLists.txt  config.cpp  config.h  mean_image.cpp  mean_image.h  mkldnn_async_infer_request.cpp  mkldnn_async_infer_request.h  mkldnn_descriptor.cpp  mkldnn_descriptor.h  mkldnn_dims.h  mkldnn_edge.cpp  mkldnn_edge.h  mkldnn_extension_mngr.cpp  mkldnn_extension_mngr.h  mkldnn_extension_utils.cpp  mkldnn_extension_utils.h  mkldnn_graph.cpp  mkldnn_graph.h  mkldnn_graph_optimizer.cpp  mkldnn_graph_optimizer.h  mkldnn_infer_request.cpp  mkldnn_infer_request.h  mkldnn_memory.cpp  mkldnn_memory.h  mkldnn_node.cpp  mkldnn_node.h  mkldnn_plugin.cpp  mkldnn_plugin.h  perf_count.h
vpu-hal2/dl/inference-engine/src/mkldnn_plugin/mkldnn/: cpu_engine.h  cpu_prim_layer.h  cpu_prim_tensor.h  desc_iterator.hpp  iml_type_mapper.cpp  iml_type_mapper.h  omp_manager.h
vpu-hal2/dl/inference-engine/src/mkldnn_plugin/nodes/: mkldnn_activation_node.cpp  mkldnn_activation_node.h  mkldnn_batchnorm_node.cpp  mkldnn_batchnorm_node.h  mkldnn_clamp_node.cpp  mkldnn_clamp_node.h  mkldnn_concat_node.cpp  mkldnn_concat_node.h  mkldnn_conv_node.cpp  mkldnn_conv_node.h  mkldnn_copy_node.h  mkldnn_crop_node.cpp  mkldnn_crop_node.h  mkldnn_deconv_node.cpp  mkldnn_deconv_node.h  mkldnn_eltwise_node.cpp  mkldnn_eltwise_node.h  mkldnn_fullyconnected_node.cpp  mkldnn_fullyconnected_node.h  mkldnn_generic_node.cpp  mkldnn_generic_node.h  mkldnn_input_node.cpp  mkldnn_input_node.h  mkldnn_lrn_node.cpp  mkldnn_lrn_node.h  mkldnn_memory_node.cpp  mkldnn_memory_node.hpp  mkldnn_permute_node.cpp  mkldnn_permute_node.h  mkldnn_pooling_node.cpp  mkldnn_pooling_node.h  mkldnn_power_node.cpp  mkldnn_power_node.h  mkldnn_reorder_node.cpp  mkldnn_reorder_node.h  mkldnn_reshape_node.cpp  mkldnn_reshape_node.h  mkldnn_roi_pooling_node.cpp  mkldnn_roi_pooling_node.h  mkldnn_scaleshift_node.cpp  (+7 more)
vpu-hal2/dl/inference-engine/src/vpu/: CMakeLists.txt
vpu-hal2/dl/inference-engine/src/vpu/common/: CMakeLists.txt  GraphInfo.h  IExecutor.h  common.h  environment.h  parsed_config.cpp  parsed_config.h  vpu_logger.cpp  vpu_logger.h  vpu_plugin_config_private.hpp
vpu-hal2/dl/inference-engine/src/vpu/graph_transformer/: CMakeLists.txt  graph_transformer.hpp  graph_transformer_impl.cpp  graph_transformer_impl.hpp  mv_blob_format.h  mv_common.h
vpu-hal2/dl/inference-engine/src/vpu/graph_transformer/hw/: common.cpp  common.hpp  convolution.cpp  fc.cpp  fill_descriptors.cpp  pack_concat.cpp  pooling.cpp
vpu-hal2/dl/inference-engine/src/vpu/graph_transformer/ir/: in_out_convert.cpp  parse_data.cpp  parse_network.cpp  pre_process.cpp
vpu-hal2/dl/inference-engine/src/vpu/graph_transformer/optimizations/: convert_order.cpp  eliminate_copy.cpp  eliminate_reshape.cpp  pack_memory.cpp  pack_postops.cpp
vpu-hal2/dl/inference-engine/src/vpu/graph_transformer/stages/: batch_norm.cpp  (+31 more)
vpu-hal2/dl/inference-engine/src/vpu/hddl_plugin/: CMakeLists.txt  hddl_allocator.cpp  hddl_allocator.h  hddl_executable_network.h  hddl_executor.cpp  hddl_executor.h  hddl_infer_request.cpp  hddl_infer_request.h  hddl_plugin.cpp  hddl_plugin.h
vpu-hal2/dl/inference-engine/src/vpu/myriad_plugin/: CMakeLists.txt  myriad_async_infer_request.cpp  myriad_async_infer_request.h  myriad_executable_network.h  myriad_executor.cpp  myriad_executor.h  myriad_infer_request.cpp  myriad_infer_request.h  myriad_plugin.cpp  myriad_plugin.h
(+568 files in other folders)
